# kylin-doctor

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build-deb.sh  install.sh  kylin-doctor-项目介绍.docx  uninstall.sh  项目介绍.py
crates/kylin-doctor-cli/: Cargo.toml
crates/kylin-doctor-cli/src/: main.rs  markdown.rs  spinner.rs
crates/kylin-doctor-cli/src/commands/: chat.rs  fix.rs  knowledge.rs  mod.rs  report.rs  scan.rs  serve.rs
crates/kylin-doctor-core/: Cargo.toml
crates/kylin-doctor-core/src/: config.rs  detector.rs  lib.rs  util.rs
crates/kylin-doctor-core/src/detectors/: hardware.rs  mod.rs  performance.rs  security.rs  software.rs  system.rs
crates/kylin-doctor-core/src/knowledge/: mod.rs  store.rs
crates/kylin-doctor-core/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs  provider.rs  tools.rs
crates/kylin-doctor-web/: Cargo.toml
crates/kylin-doctor-web/src/: api.rs  dashboard.html  lib.rs  main.rs
docs/: DEPLOYMENT.md  USAGE.md  kylin-doctor-introduction.py  kylin-doctor-update-v0.2.0-v0.3.1.docx  kylin-doctor-update-v0.3.1-v0.4.0.md  kylin-doctor-架构分析与作品介绍.docx  v0.2.0-v0.3.1-update-notes.py
docs/superpowers/specs/: 2026-05-29-kylin-doctor-design.md
pkg/deb/: config.toml.example  kylin-doctor-web.service
