[package]
name = "kylin-doctor-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kylin-doctor"
path = "src/main.rs"

[dependencies]
kylin-doctor-core = { path = "../kylin-doctor-core" }
kylin-doctor-web = { path = "../kylin-doctor-web" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "3"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde_json = "1"
