[package]
name = "kylin-doctor-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kylin-doctor-web"
path = "src/main.rs"

[dependencies]
kylin-doctor-core = { path = "../kylin-doctor-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
